k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /koktejli(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: koktejli-service
                port:
                  number: 8080
          - path: /seznam(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: seznam-service
                port:
                  number: 8080
          - path: /spletni-vmesnik(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rso16-sv-service
                port:
                  number: 8080
